results/SVCOMP/4-shot/log-exceptions12-2024_03_18_15_15_32.txt
class A extends RuntimeException {}

class B extends A {}

class C extends B {}

class F {
  //@ ensures \result == false;
  void foo() {
    try {
      B b = new B();
      throw b;
    } catch (B exc) {
      assert false;
    }
  }
}

public class exceptions12 {
  //@ ensures \result == false;
  public static void main(String[] args) {
    try {
      F f = new F();
      f.foo();
    } catch (B exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions12.java:8: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == false;
               ^
/home/max/Documents/JMLGPT/tmp/exceptions12.java:20: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result == false;
               ^
2 errors

